--- a/.config/i3/config
+++ b/.config/i3/config
@@ -189,7 +189,15 @@ bar {
 
 # Custom
 exec_always xset r rate 200 40
+exec_always xset dpms 3600 3600 3600
 workspace_auto_back_and_forth yes
 
 # Startup
 exec --no-startup-id ~/.config/i3/startup.sh
+
+
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
+
+
+
