Add 1 based indexing

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,6 +4,7 @@ bind-key C-x send-prefix
 set-option -g mouse on
 set-option -g set-clipboard on
 
+set -g base-index 1
 set -g mode-keys emacs
 set -g status-keys emacs
 
@@ -11,6 +12,6 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 
-set -g @yank_selection 'primary'
+set -g @yank_selection 'clipboard'
 
 run '~/.tmux/plugins/tpm/tpm'
