--- a/.config/i3/config
+++ b/.config/i3/config
@@ -190,13 +190,14 @@ bar {
 # Custom
 exec_always xset r rate 200 40
 exec_always xset dpms 3600 3600 3600
+exec_always xset s off
 
 # Startup
 exec --no-startup-id ~/.config/i3/startup.sh
 
-
 bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 
-
+# Take screenshot, copy to clipboard and save to Pictures
+bindsym --release Print exec "scrot -s '%Y:%m:%d:%H:%M:%S.png' -e 'xclip -selection clipboard -t image/png -i $f && mv $f ~/Pictures'"
 
