Update tmux conf

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -15,3 +15,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @yank_selection 'clipboard'
 
 run '~/.tmux/plugins/tpm/tpm'
+
+bind '"' split-window -c "#{pane_current_path}"   
+bind %  split-window -h -c "#{pane_current_path}"   
+bind c  new-window -c "#{pane_current_path}"   
