Add touchpad, sound defaults

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -16,6 +16,7 @@ set -g @yank_selection 'clipboard'
 
 run '~/.tmux/plugins/tpm/tpm'
 
+bind -n MouseDown2Pane run 'tmux set-buffer "$(xsel -op)" && tmux paste-buffer'
 bind '"' split-window -c "#{pane_current_path}"   
 bind %  split-window -h -c "#{pane_current_path}"   
 bind c  new-window -c "#{pane_current_path}"   
