--- a/.config/i3/config
+++ b/.config/i3/config
@@ -187,8 +187,11 @@ bar {
         status_command i3status
 }
 
+# Map capslock to ctrl
+exec_always --no-startup-id "setxkbmap -option caps:ctrl_modifier"
+
 # Custom
-exec_always xset r rate 200 40
+exec_always xset r rate 180 80
 exec_always xset dpms 3600 3600 3600
 exec_always xset s off
 
@@ -201,3 +204,10 @@ bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 # Take screenshot, copy to clipboard and save to Pictures
 bindsym --release Print exec "scrot -s '%Y:%m:%d:%H:%M:%S.png' -e 'xclip -selection clipboard -t image/png -i $f && cp $f ~/Pictures'"
 
+# Touchpad
+
+exec --no-startup-id xinput set-prop "DLL0945:00 06CB:CDE6 Touchpad" "libinput Tapping Enabled" 1
+exec --no-startup-id xinput set-prop "DLL0945:00 06CB:CDE6 Touchpad" "libinput Natural Scrolling Enabled" 1
+
+# Sound
+exec --no-startup-id "pactl set-default-sink alsa_output.pci-0000_00_1f.3-platform-skl_hda_dsp_generic.HiFi__hw_sofhdadsp__sink"
