--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,22 +1,17 @@
 unbind C-b
-set-option -g prefix C-x
-bind-key C-x send-prefix
-set-option -g mouse on
-set-option -g set-clipboard on
-
+set -g prefix C-x
+bind C-x send-prefix
+set -g mouse on
 set -g base-index 1
 set -g mode-keys emacs
 set -g status-keys emacs
 
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-yank'
+set -g set-clipboard on
 
-set -g @yank_selection 'clipboard'
-
-run '~/.tmux/plugins/tpm/tpm'
-
+# Copy from primary clipboard into tmux
 bind -n MouseDown2Pane run 'tmux set-buffer "$(xsel -op)" && tmux paste-buffer'
-bind '"' split-window -c "#{pane_current_path}"   
-bind %  split-window -h -c "#{pane_current_path}"   
-bind c  new-window -c "#{pane_current_path}"   
+
+# Copy from tmux mouse selection to primary clipboard
+bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe "xsel -ip"
+
+
