--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -5,7 +5,7 @@ set -g mouse on
 set -g base-index 1
 set -g mode-keys emacs
 set -g status-keys emacs
-
+set -g history-limit 2147483647
 set -g set-clipboard on
 
 # Copy from primary clipboard into tmux
@@ -14,4 +14,7 @@ bind -n MouseDown2Pane run 'tmux set-buffer "$(xsel -op)" && tmux paste-buffer'
 # Copy from tmux mouse selection to primary clipboard
 bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe "xsel -ip"
 
-
+# Always open new windows with current directory path
+bind  c  new-window      -c "#{pane_current_path}"
+bind  %  split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
